# smash

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Readme.md  configure
compression_libraries/: CMakeLists.txt  libraries.cmake
compression_libraries/brieflz_/: CMakeLists.txt  Readme.md  configure
compression_libraries/brieflz_/include/: brieflz_library.hpp
compression_libraries/brieflz_/src/: brieflz_library.cpp
compression_libraries/brotli_/: CMakeLists.txt  Readme.md  configure
compression_libraries/brotli_/include/: brotli_library.hpp
compression_libraries/brotli_/src/: brotli_library.cpp
compression_libraries/bzip2_/: CMakeLists.txt  Readme.md  configure
compression_libraries/bzip2_/include/: bzip2_library.hpp
compression_libraries/bzip2_/src/: bzip2_library.cpp
compression_libraries/c-blosc2_/: CMakeLists.txt  Readme.md  configure
compression_libraries/c-blosc2_/include/: c-blosc2_library.hpp
compression_libraries/c-blosc2_/src/: c-blosc2_library.cpp
compression_libraries/csc_/: CMakeLists.txt  Readme.md  configure
compression_libraries/csc_/include/: csc_library.hpp
compression_libraries/csc_/src/: csc_library.cpp
compression_libraries/density_/: CMakeLists.txt  Readme.md  configure
compression_libraries/density_/include/: density_library.hpp
compression_libraries/density_/src/: density_library.cpp
compression_libraries/fari_/: CMakeLists.txt  Readme.md  configure
compression_libraries/fari_/include/: fari_library.hpp
compression_libraries/fari_/src/: fari_library.cpp
compression_libraries/flz_/: CMakeLists.txt  Readme.md  configure
compression_libraries/flz_/include/: flz_library.hpp
compression_libraries/flz_/src/: flz_library.cpp
compression_libraries/flzma2_/: CMakeLists.txt  Readme.md  configure
compression_libraries/flzma2_/include/: flzma2_library.hpp
compression_libraries/flzma2_/src/: flzma2_library.cpp
compression_libraries/fse_/: CMakeLists.txt  Readme.md  configure
compression_libraries/fse_/include/: fse_library.hpp
compression_libraries/fse_/src/: fse_library.cpp
compression_libraries/gipfeli_/: CMakeLists.txt  configure
compression_libraries/gipfeli_/include/: gipfeli_library.hpp
compression_libraries/gipfeli_/src/: gipfeli_library.cpp
compression_libraries/heatshrink_/: CMakeLists.txt  configure
compression_libraries/heatshrink_/include/: heatshrink_library.hpp
compression_libraries/heatshrink_/src/: heatshrink_library.cpp
compression_libraries/include/: compression_libraries.hpp  compression_library.hpp  options.hpp  smash.hpp  smash_connection.hpp  smash_memory.hpp  smash_memory.inl
compression_libraries/libbsc_/: CMakeLists.txt  Readme.md  configure
compression_libraries/libbsc_/include/: libbsc_library.hpp
compression_libraries/libbsc_/src/: libbsc_library.cpp
compression_libraries/libdeflate_/: CMakeLists.txt  Readme.md  configure
compression_libraries/libdeflate_/include/: libdeflate_library.hpp
compression_libraries/libdeflate_/src/: libdeflate_library.cpp
compression_libraries/liblzg_/: CMakeLists.txt  Readme.md  configure
compression_libraries/liblzg_/include/: liblzg_library.hpp
compression_libraries/liblzg_/src/: liblzg_library.cpp
compression_libraries/lizard_/: CMakeLists.txt  Readme.md  configure
compression_libraries/lizard_/include/: lizard_library.hpp
compression_libraries/lizard_/src/: lizard_library.cpp
compression_libraries/lodepng_/: CMakeLists.txt  configure
compression_libraries/lodepng_/include/: lodepng_library.hpp
compression_libraries/lodepng_/src/: lodepng_library.cpp
compression_libraries/lz4_/: CMakeLists.txt  Readme.md  configure
compression_libraries/lz4_/include/: lz4_library.hpp
compression_libraries/lzf_/: CMakeLists.txt  Readme.md  configure
compression_libraries/lzfse_/: CMakeLists.txt  Readme.md  configure
compression_libraries/lzfx_/: CMakeLists.txt  Readme.md  configure
compression_libraries/lzham_/: CMakeLists.txt  Readme.md  configure
compression_libraries/lzjb_/: CMakeLists.txt  Readme.md  configure
compression_libraries/lzma_/: CMakeLists.txt  Readme.md  configure
compression_libraries/lzmat_/: CMakeLists.txt  Readme.md  configure
compression_libraries/lzo_/: CMakeLists.txt  Readme.md  configure
compression_libraries/lzsse_/: CMakeLists.txt  configure
compression_libraries/miniz_/: CMakeLists.txt  Readme.md  configure
compression_libraries/ms_/: CMakeLists.txt  Readme.md  configure
compression_libraries/pithy_/: CMakeLists.txt  Readme.md  configure
compression_libraries/quicklz_/: CMakeLists.txt  Readme.md  configure
compression_libraries/snappy_/: CMakeLists.txt  Readme.md  configure
compression_libraries/src/: compression_libraries.cpp  compression_library.cpp  options.cpp  smash.cpp  smash_chunks.cpp  smash_connection.cpp  smash_memory.cpp  smash_network.cpp
compression_libraries/ucl_/: CMakeLists.txt  Readme.md  configure
compression_libraries/wflz_/: CMakeLists.txt  Readme.md  configure
compression_libraries/xpack_/: CMakeLists.txt  Readme.md  configure
compression_libraries/yalz77_/: CMakeLists.txt  Readme.md  configure
compression_libraries/z3lib_/: CMakeLists.txt  Readme.md  configure
compression_libraries/zlib-ng_/: CMakeLists.txt  Readme.md  configure
compression_libraries/zlib_/: CMakeLists.txt  configure
compression_libraries/zling_/: CMakeLists.txt  configure
compression_libraries/zpaq_/: CMakeLists.txt  configure
compression_libraries/zstd_/: CMakeLists.txt  Readme.md  configure
include/: cpu_compression_libraries.hpp  (+7 more)
smash_benchmark/: CMakeLists.txt
smash_benchmark/include/: network.hpp  network_client.hpp  network_server.hpp  result.hpp  utils.hpp
smash_benchmark/src/: network.cpp  network_client.cpp  network_server.cpp  result.cpp  smash_benchmark.cpp  smash_benchmark_client.cpp  smash_benchmark_server.cpp  utils.cpp
smash_library/: CMakeLists.txt
smash_library/compression_libraries/: libraries.cmake
smash_library/include/: compression_libraries.hpp  options.hpp  smash.hpp
smash_library/src/: compression_library.cpp  smash.cpp
(+87 files in other folders)
